# gggpScatteringIHQCD

./: .gitignore  CMakeLists.txt  Dockerfile.setup.cluster  Makefile  Readme.md  fitDIS.txt  fit_gamma_gamma_hessian.txt  sigma_gamma_proton_hessian_my_laptop.txt
Mathematica/: gamma_gamma_scattering.nb  gravitational_couplins.nb  running_of_alphaQED.nb
expdata/: gammagammaSigma.ipynb
expdata/DIS/: F2_data.txt
expdata/F2_photon/: F2_photon_data_analysis.ipynb  F2_photon_xmax_0.01.txt
expdata/GammaGamma/: SigmaGammaGamma_PDG_data.txt  SigmaGammaGamma_PDG_data_W_gt_20.txt  SigmaGammaGamma_PDG_data_W_gt_30.txt  SigmaGammaGamma_PDG_data_W_gt_4.txt  SigmaGammaGamma_PDG_new_raw.txt  SigmaGammaGamma_PDG_raw.txt  gammagammaScatteringL3PHOJET.txt  gammagammaScatteringL3Processed.txt  gammagammaSigma.ipynb  gammagammaSigma_L3_raw.txt  gammagammaSigma_OPAL_raw.txt  gammagammaSigma_TPC_raw.txt  load_Sigma_GammaGamma_PDG_data.ipynb
expdata/GammaP/: SigmaGammaP_PDG_data_W_gt_208.txt  SigmaGammaP_PDG_new_raw.txt  SigmaGammaP_PDG_raw.txt  SigmaGammaProton.txt  data.txt  load_Sigma_GammaP_PDG_data.ipynb  load_sigma_gammaP_data.ipynb
expdata/SigmaProtonProton/: SigmaProtonProton_data.txt  SigmaProtonProton_data_10_lt_W_lt_10000.txt  SigmaProtonProton_data_52_lt_W_lt_386.txt  SigmaProtonProton_data_W_lt_386.txt  SigmaProtonProton_new_raw.txt  SigmaProtonProton_raw.txt  importSigmaProtonProton.ipynb
include/: DeepInelasticScattering.h  F2.h  F2Photon.h  FL.h  GluonKernel.h  HQCDP.h  HardPomeron.h  IHQCD.h  Kernel.h  PhotonScattering.h  Process.h  ProcessObservable.h  Reggeon.h  Sigma.h  SigmaGammaGamma.h  SigmaGammaProton.h  SigmaProtonProton.h  SoftPomeron.h  Spectra.h  U1NNMode.h  alphaQED.h  gluonPDF.h  uncertainties.hpp
include/methods/: search.hpp  vectorOperators.hpp
include/schrodinger/: chebspec.h  common.h  numerov.h  schrodinger.h  solvspec.h
notes/: photonScattering_notes.fdb_latexmk  photonScattering_notes.fls  photonScattering_notes.tex
notes/bib/: exp_data.bib
physics/: computeGluonPDF.cpp  computeReggeTrajectories.cpp  fitAll.cpp  fitDIS.cpp  fitDIS_SigmaGammaProton.cpp  fitF2PhotonSigmaGammaGammaDISSigmaGammaProton.cpp  fitF2Photon_HardPomeron_4Reggeons.cpp  fitF2SigmaGammaProton.cpp  fitFLSigmaGammaProton.cpp  fitGammaGammaAllPars.cpp  fitGammaGammaGammaProtonAllPars.cpp  fitGammaGammaGammaProtonKernelPars.cpp  fitGammaGammaGammaProtonUncertainties.cpp  fitGammaGammaKernelPars.cpp  fitGammaGammaUncertainties.cpp  fitGammaProtonAllPars.cpp  fitGammaProtonKernelPars.cpp  fitGammaProtonUncertainties.cpp  fitSigmaF2Photon_HardPomeron_4Reggeons.cpp  fitSigmaGammaGammaF2Photon_HardPomeron_4Reggeons.cpp  fitSigmaGammaGamma_HardPomeron_2Reggeons.cpp  fitSigmaGammaGamma_HardPomeron_4Reggeons.cpp  fitSigmaGammaGamma_SoftPomeron.cpp  fitSigmaGammaProton_HardPomeron.cpp  fitSigmaGammaProton_SoftPomeron.cpp  fitSigmaProtonProton_HardPomeron.cpp  fitSigmaProtonProton_SoftPomeron.cpp  fitSigma_HardPomeron_2Reggeons.cpp  fitSigma_HardPomeron_4Reggeons.cpp  fitSigma_SoftPomeron.cpp  globalFit.cpp  globalFit_fixedKernel.cpp  globalPomeronFit.cpp  gravitational_couplings_aux_calculations.cpp  predictDISStructureFunctions.cpp  predictF2Photon.cpp  predictSigmaGammaGamma_HardPomeron_4Reggeons.cpp  predictSigmaGammaGamma_SoftPomeron.cpp  predictSigmaGammaProton_HardPomeron.cpp  predictSigmaGammaProton_SoftPomeron.cpp  (+3 more)
plots/DIS/: F2_plot_splitted.py  F2_plot_splitted_2.py  FL_DIS_fit_pred.txt  FL_F2_plus_sigma_fit_pred.txt  FL_FL_plus_sigma_fit_pred.txt  FL_data.txt  FL_final_pred.txt  FL_plot_splitted.py  FL_plot_splitted_2.py  FL_pred.txt  FL_pred_2.txt  FL_pred_joint_fit_PDG_1.txt  FL_pred_joint_fit_PDG_2.txt  plotF2.py  plotFL.py
plots/F2Photon/: F2Photon_data.txt  plotF2Photon.ipynb  plot_DIS_functions.ipynb
plots/ReggeTrajectories/: regge_trajectories.ipynb  regge_trajectories_dvcs_N_1000_gluon.txt  regge_trajectories_dvcs_gluon.txt  regge_trajectories_gluon.txt
plots/SigmaGammaGamma/: SigmaGammaGamma_PDG_data_W_gt_10.txt  SigmaGammaGamma_final_pred.txt  SigmaGammaGamma_pred_HardPomeron_PDG_data_only_W_gt_4.txt  SigmaGammaGamma_pred_PDG_HardPomeron.txt  SigmaGammaGamma_pred_PDG_SoftPomeron.txt  SigmaGammaGamma_pred_PDG_data_only_W_gt_4_SoftPomeron.txt  SigmaGammaGamma_pred_PHOJET.txt  SigmaGammaGamma_pred_PHOJET_data_only.txt  SigmaGammaGamma_pred_PHYTIA.txt  SigmaGammaGamma_pred_PHYTIA_data_only.txt  SigmaGammaGamma_pred_Processed.txt  SigmaGammaGamma_pred_Processed_data_only.txt  SigmaGammaGamma_pred_joint_fit_PDG.txt  SigmaGammaGamma_pred_joint_fit_PDG_W_gt_4.txt  gammagammaScatteringL3PHYTIA.txt  plotSigmaGammaGamma.ipynb  sigma_gamma_gamma_pred.txt
plots/SigmaGammaP/: SigmaGammaP_PDG_data.txt  SigmaGammaP_PDG_data_W_gt_10.txt  SigmaGammaP_PDG_data_W_gt_337.txt  SigmaGammaP_PDG_data_W_gt_461.txt  SigmaGammaP_pred.txt  SigmaGammaP_pred_2.txt  SigmaGammaP_pred_PDG_data_only.txt  SigmaGammaP_pred_joint_fit_PDG_1.txt  SigmaGammaP_pred_joint_fit_PDG_2.txt  SigmaGammaProton_final_pred.txt  plotSigmaGammaP.ipynb  plotSigmaGammaProton.ipynb  sigma_gamma_proton_DIS_fit_pred.txt  sigma_gamma_proton_F2_plus_sigma_fit_pred.txt  sigma_gamma_proton_fl_plus_sigma_fit_pred.txt  sigma_gamma_proton_pred.txt
plots/SigmaProtonProton/: SigmaProtonProton_data_W_lt_10000.txt  (+3 more)
results/: fitF2SigmaGammaProton.txt  fitFLSigmaGammaProton.txt  fit_gamma_gamma_gamma_proton_hessian.txt  gamma_proton_hessian_h_1EMINUS5.txt
src/: DeepInelasticScattering.cpp  F2.cpp  F2Photon.cpp  FL.cpp  GluonKernel.cpp  HQCDP.cpp  HardPomeron.cpp  IHQCD.cpp  Kernel.cpp  PhotonScattering.cpp  Process.cpp  ProcessObservable.cpp  Reggeon.cpp  Sigma.cpp  SigmaGammaGamma.cpp  SigmaGammaProton.cpp  SigmaProtonProton.cpp  SoftPomeron.cpp  Spectra.cpp  U1NNMode.cpp  alphaQED.cpp  gluonPDF.cpp
src/Fortran/: colnew.f
tests/: test_F2Photon.cpp  test_HQCDP_HardPomeron.cpp  test_HQCDP_SoftPomeron.cpp  test_HardPomeron.cpp  test_Kernel.cpp  test_PhotonScattering.cpp  test_SigmaGammaGamma.cpp  test_SigmaGammaProton.cpp  test_SoftPomeron.cpp  test_U1NNMode.cpp  test_alphaQED.cpp  test_f2Spectrum.cpp  test_schrodinger.cpp
(+37 files in other folders)
